Changelog
=========

1.3.5 (unreleased)
------------------

- Add conditional install of plonetheme.classic in upgrade step 4.0a1. Since
  plonetheme.classic will be removed in Plone 5, we can not be sure that it
  is always installed.
  [timo]

- Replace deprecated test assert statements.
  [timo]

- Add undeclared Products.TinyMCE dependency.
  [timo]

- Add use_uuid_as_userid site property in Plone 5.
  Part of PLIP 13419.
  [maurits]

- Use lowercase for email login in Plone 5.
  Part of PLIP 13419.
  [maurits]

- Remove persistent kss_mimetype import step.
  [maurits]

- Fix name of Plone 5 zcml conditional feature to plone-5.
  [thet]


1.3.4 (2013-08-14)
------------------

- Replace basic infrastructure for 4.4 series with same for 5.0 series.
  [davisagli]

- Upgrade TinyMCE: Remove space from style to prevent bogus class.
  [maurits]


1.3.3 (2013-06-13)
------------------

- Add upgrade step to set image scaling quality (p.a.imaging 1.0.8).
  [khink]

- Upgrade broken 'added' content rules.
  [thomasdesvenain]

- handle syndication upgrade when folder is not syndication enabled but
  has syndication information.
  [vangheem]


1.3.2 (2013-05-30)
------------------

- Nothing changed yet.


1.3.1 (2013-04-13)
------------------

- Fix upgrade-step upgradeSyndication for Dexterity
  [pbauer]


1.3 (2013-04-06)
----------------

- Add basic upgrade infrastructure for the Plone 4.4 series.
  [davisagli]

- Do not import Products.kupu. Fixes https://dev.plone.org/ticket/13480
  [danjacka]


1.3rc1 (2013-03-05)
-------------------

- add step for rc1 to upgrade catalog correctly
  [vangheem]

- Avoid hard dependency on ATContentTypes.
  [davisagli]


1.3b2 (2013-01-17)
------------------

- Run plonetheme.sunburst 1.4 upgrade.
  [esteele]

- Add upgrade step for plone.app.discussion.
  [toutpt]


1.3b1 (2013-01-01)
------------------

- Make sure the syndication upgrade step unregisters the old tool
  as a utility.
  [davisagli]
