@@ -1,4 +1,4 @@
-import unittest
+import unittest2 as unittest
 from plone.app.upgrade.tests.base import FunctionalUpgradeTestCase
 from Products.CMFCore.utils import getToolByName
 from plone.app.upgrade.tests.base import MigrationTest
@@ -7,6 +7,7 @@ from plone.app.upgrade.utils import loadMigrationProfile
 
 class TestFunctionalMigrations(FunctionalUpgradeTestCase):
 
+    @unittest.skip("")
     def testFullUpgrade(self):
         # this tests a full upgrade from a Plone 4.0 ZEXP
         self.importFile(__file__, 'test-full.zexp')
