@@ -4,6 +4,11 @@ Changelog
 1.3.5 (unreleased)
 ------------------
 
+- Do not run certain tests that assume there is a portal_discussion tool
+  available if we are on Plone 5 (since the portal_discussion tool will be
+  removed in Plone 5).
+  [timo]
+
 - Add conditional install of plonetheme.classic in upgrade step 4.0a1. Since
   plonetheme.classic will be removed in Plone 5, we can not be sure that it
   is always installed.
